<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/side_nav_bar"
        android:shortcutDisabledMessage="@string/static_shortcut_disabled_message"
        android:shortcutId="static"
        android:shortcutLongLabel="@string/static_shortcut_long_label_1"
        android:shortcutShortLabel="@string/static_shortcut_short_label_1">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.prize.dagger2_demo.ScrollingActivity"
            android:targetPackage="com.prize.dagger2_demo" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/side_nav_bar"
        android:shortcutDisabledMessage="@string/static_shortcut_disabled_message2"
        android:shortcutId="static_2"
        android:shortcutLongLabel="@string/static_shortcut_long_label_2"
        android:shortcutShortLabel="@string/static_shortcut_short_label_2">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.prize.dagger2_demo.ScrollingActivity"
            android:targetPackage="com.prize.dagger2_demo" />
    </shortcut>
</shortcuts>